modal scroll behind fix

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -39,6 +39,7 @@ body {
 html, body {
     height: 100%;
     min-height: 100%;
+    overflow: hidden;
 }
 *, *:before, *:after {
 	box-sizing: inherit;
